Finished for the night.

--- a/AngularProfile-Page/src/app/login/login.component.html
+++ b/AngularProfile-Page/src/app/login/login.component.html
@@ -24,7 +24,7 @@
     </label>
   </div>
   <div class="form-group">
-    <button [disabled]="!LoginForm.valid || loading" [ngClass]="LoginButtonAppearance()" class="btn btn-lg btn-block FakeClickable" type="submit">{{LoginMessage}} Bailey Was Here</button>
+    <button [disabled]="!LoginForm.valid || loading" [ngClass]="LoginButtonAppearance()" class="btn btn-lg btn-block FakeClickable" type="submit">{{LoginMessage}}</button>
   </div>
 
 <div *ngIf="alertVisible">
